--- a/participants_melee.html
+++ b/participants_melee.html
@@ -343,7 +343,7 @@ stelo.Mirror 1.1,http://robocode-archive.strangeautomata.com/robots/stelo.Mirror
 stelo.MirrorMicro 1.0,http://robocode-archive.strangeautomata.com/robots/stelo.MirrorMicro_1.0.jar
 stelo.MirrorNano 1.3,http://robocode-archive.strangeautomata.com/robots/stelo.MirrorNano_1.3.jar
 stelo.MyAgileRobot 0.2,http://robocode-archive.strangeautomata.com/robots/stelo.MyAgileRobot_0.2.jar
-stelo.PastFuture 2.3.0,https://github.com/kimtg/robocode-bots/releases/download/PastFuture-2.3.0/stelo.PastFuture_2.3.0.jar
+stelo.PastFuture 2.3.1,https://github.com/kimtg/robocode-bots/releases/download/release/stelo.PastFuture_2.3.1.jar
 stelo.PatternRobot 1.0,http://robocode-archive.strangeautomata.com/robots/stelo.PatternRobot_1.0.jar
 stelo.PianistNano 1.2,http://robocode-archive.strangeautomata.com/robots/stelo.PianistNano_1.2.jar
 stelo.RamTrackSurfer 1.2,http://robocode-archive.strangeautomata.com/robots/stelo.RamTrackSurfer_1.2.jar
