--- a/participants_melee.html
+++ b/participants_melee.html
@@ -156,7 +156,7 @@ Grystrion.RandomTrackerNOREV 1.0,https://www.dropbox.com/s/9ym5golnwurhfxw/Gryst
 Grystrion.TrackerWO 1.0,https://www.dropbox.com/s/f1j88yf69zn37jp/Grystrion.TrackerWO_1.0.jar?dl=1
 hvilela.HVilela 0.9,http://robocode-archive.strangeautomata.com/robots/hvilela.HVilela_0.9.jar
 ICS4U1.Patrick_White_Schrodinger 1.1,http://robocode-archive.strangeautomata.com/robots/ICS4U1.Patrick_White_Schrodinger_1.1.jar
-inonit.robocode.javascript.MyFirstRobot 1.0,https://bitbucket.org/davidpcaldwell/provision/downloads/inonit.robocode.javascript.MyFirstRobot.jar
+inonit.robocode.javascript.MyFirstRobot 1.1,https://github.com/davidpcaldwell/roborumble-participants/blob/master/inonit.robocode.javascript.MyFirstRobot_1.1.jar?raw=true
 intruder.PrairieWolf 2.61,http://robocode-archive.strangeautomata.com/robots/intruder.PrairieWolf_2.61.jar
 jab.DiamondStealer 5,http://robocode-archive.strangeautomata.com/robots/jab.DiamondStealers_5.jar
 jangs.ns51 1.0,http://robocode-archive.strangeautomata.com/robots/jangs.ns51_1.0.jar
